--- a/docs/adr-tex-2/sections/03-context.tex
+++ b/docs/adr-tex-2/sections/03-context.tex
@@ -46,7 +46,7 @@ echo "# Hello World" | git cms draft hello-world "My First Post"
         \item \texttt{GET /api/cms/list} -- List articles
         \item \texttt{GET /api/cms/show?slug=<slug>} -- Read article
     \end{itemize}
-    \item \textbf{Authentication:} None (assumes private network or SSH tunneling)
+    \item \textbf{Authentication:} None (assumes private network or SSH tunneling). \textit{See Section 11 (Risks) for threat-model implications and mitigations.}
 \end{itemize}
 
 \subsubsection{Interface 3: Git Plumbing (Shell)}
