--- a/docs/adr-tex-2/sections/07-deployment.tex
+++ b/docs/adr-tex-2/sections/07-deployment.tex
@@ -7,7 +7,7 @@
 \resizebox{\textwidth}{!}{
 \begin{tikzpicture}
     \node [block] (CLI) {git-cms CLI\\(Node.js)};
-    \node [block, right=2cm of CLI] (Repo) {Local Repo\\(\.git/objects)};
+    \node [block, right=2cm of CLI] (Repo) {Local Repo\\(\texttt{.git/objects})};
     \draw [line] (CLI) -- node [above, scale=0.8] {I/O} (Repo);
     \node [draw, dashed, thick, inner sep=15pt, fit=(CLI) (Repo)] (Box) {};
     \node [anchor=south, font=\bfseries] at (Box.north) {Author's Laptop};
@@ -23,7 +23,7 @@
 \resizebox{\textwidth}{!}{
 \begin{tikzpicture}[node distance=2.5cm]
     \node [block] (CMS_A) {git-cms CLI};
-    \node [block, below of=CMS_A] (CMS_B) {git-cms CLI};
+    \node [block, below=of CMS_A] (CMS_B) {git-cms CLI};
     \node [block, right=3cm of CMS_A, yshift=-1.25cm] (Stargate) {\textbf{git-stargate}\\(Bare Repo + Hooks)};
     \node [block, right=2.5cm of Stargate] (GitHub) {GitHub\\(Mirror)};
 
@@ -43,7 +43,7 @@
 \begin{tikzpicture}[node distance=1.5cm]
     \node [block] (Node) {HTTP Server\\Node.js};
     \node [block, below=of Node] (Git) {Git CLI};
-    \node [block, below=of Git] (Repo) {\.git/objects};
+    \node [block, below=of Git] (Repo) {\texttt{.git/objects}};
     
     \node [draw, dashed, thick, inner sep=10pt, fit=(Node) (Git) (Repo)] (Cont) {};
     \node [anchor=east, font=\bfseries] at (Cont.west) {Docker Container};
