--- a/docs/adr-tex-2/figures/responsibilities.tex
+++ b/docs/adr-tex-2/figures/responsibilities.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}[node distance=1cm, auto, font=\small]
+\begin{tikzpicture}[auto, font=\small]
     \node [blockshaded, text width=2.5cm, minimum height=8cm] (CMS) {\textbf{CmsService}};
     \node [block, text width=4.5cm, right=3cm of CMS.north, anchor=north] (PL) {\textbf{@git-stunts/plumbing}\\execute, executeStream};
     \node [block, text width=4.5cm, below=0.5cm of PL] (TC) {\textbf{@git-stunts/trailer-codec}\\encode, decode};
