--- a/docs/adr-tex-2/meta.tex
+++ b/docs/adr-tex-2/meta.tex
@@ -1,5 +1,4 @@
 % meta.tex
-\title{\textbf{Architecture Decision Record: Git CMS}\\ \large Database-Free Content Management via Git Plumbing}
+\title{Architecture Decision Record: Git CMS\\ \large Database-Free Content Management via Git Plumbing}
 \author{James Ross}
-\date{Version 1.0.0 -- Last Updated: 2026-01-11}
-
+\date{Version 1.0.0 \textemdash{} Last Updated: \today}
