--- a/docs/adr-tex-2/sections/11-risks.tex
+++ b/docs/adr-tex-2/sections/11-risks.tex
@@ -6,6 +6,11 @@ Git's reliance on SHA-1 is a known cryptographic risk. While the likelihood of a
 \subsection{Risk 2: Repository Growth}
 Every draft save creates a permanent commit. Over years of active use, the object store could grow significantly. Regular \texttt{git gc --aggressive} and ref pruning strategies are needed.
 
+\subsection{Risk 3: Unauthenticated Write Interface}
+The HTTP API intentionally has no built-in authentication in this architecture. Exposing it beyond trusted local or tunneled environments can permit unauthorized content writes.
+
+\textbf{Mitigation:} Bind the service to trusted interfaces only, protect it behind SSH tunneling or an authenticated reverse proxy, and restrict CORS/origin policy in deployment.
+
 \subsection{Technical Debt Summary}
 \begin{table}[H]
 \centering
@@ -16,6 +21,7 @@ Every draft save creates a permanent commit. Over years of active use, the objec
 Automated ref pruning & High & Reduces repo bloat \\
 Retry logic for CAS conflicts & Medium & Improves concurrent editing \\
 External index for large ref counts & Medium & Improves \texttt{listArticles} performance \\
+Built-in auth for HTTP write endpoints & Medium & Reduces accidental exposure risk \\
 \bottomrule
 \end{tabular}
 \end{table}
